@@ -81,16 +81,9 @@ RUBY
       insert_into_file 'app/models/user.rb', "  attr_accessible :role_ids, :as => :admin\n", :before => "  attr_accessible"
     end
     unless prefer :orm, 'mongoid'
-      generate 'rolify:role Role User'
+      generate 'rolify Role User'
     else
-      generate 'rolify:role Role User mongoid'
-      # correct the generation of rolify 3.1 with mongoid
-      # the call to `rolify` should be *after* the inclusion of mongoid
-      # (see https://github.com/EppO/rolify/issues/61)
-      # This isn't needed for rolify>=3.2.0.beta4, but should cause no harm
-      gsub_file 'app/models/user.rb',
-          /^\s*(rolify.*?)$\s*(include Mongoid::Document.*?)$/,
-          "  \\2\n  extend Rolify\n  \\1\n"
+      generate 'rolify Role User --orm=mongoid'
     end
   end
   ### GIT ###
